itip-formatter: Use open-map: link for the Location field
When you receive an email with a .ics calendar meeting invitation (in Evolution 3.52.3 and older), it shows up roughly like this:
However, that "Location:" line is static, it does not have a hyperlink on the text nor a button to open the map in GNOME Maps. It would be pretty cool if it did have one (or both!) of these, reusing some of the work that was done in #1490 (closed).
Edited by Jeff Fortin