I#2799 - itip-formatter: Use open-map: link for the Location field

Closes https://gitlab.gnome.org/GNOME/evolution/-/issues/2799